syntax = "proto3";

package socialite;

service Socialites {
    // 获取授权
    rpc Auth(Request) returns (Response) {}
    // 授权网址
    rpc AuthURL(Request) returns (Response) {}
    // 授权后注册【可用于增加新账号】
    rpc Register(Request) returns (Response) {} 
}


message Socialite {
    string driver = 1;
    string code = 2;
    string state = 3;
    string callback = 4;
}

message User {
    string id = 1;
    string username = 2;
    string mobile = 3;
    string email = 4;
    string password = 5;
    string name = 6;
    string avatar = 7;
    string token = 8;
}

message SocialiteUser {
    string id = 1;
    string oauth_id = 2;
    string origin = 3;
    string content = 4;
    repeated User users = 5;
}

message Miniprogram{ 
    string encryptedData = 1;
    string iv = 2;
    string type = 3; // 小程序类型 微信、支付宝、字节跳动、百度
}
message Request {
    Socialite socialite = 1;
    SocialiteUser socialite_user = 2;
    Miniprogram miniprogram = 3;
}

message Response {
    bool valid = 1;
    SocialiteUser socialite_user = 2;
    string url = 3;
}